[gd_scene load_steps=44 format=2]

[ext_resource path="res://resources/textures/bucketFront.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/objects/bucket.gd" type="Script" id=3]
[ext_resource path="res://resources/textures/background.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/bucketBack.png" type="Texture" id=5]
[ext_resource path="res://resources/fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/objects/ui/ui.gd" type="Script" id=7]
[ext_resource path="res://scenes/objects/clouds.gd" type="Script" id=8]
[ext_resource path="res://scenes/objects/hazards_maker.gd" type="Script" id=9]
[ext_resource path="res://scenes/objects/game_camera.gd" type="Script" id=10]
[ext_resource path="res://scenes/objects/progress_bar.gd" type="Script" id=11]
[ext_resource path="res://resources/textures/progress_bar.png" type="Texture" id=12]
[ext_resource path="res://resources/godot/progress_shader.tres" type="Material" id=13]
[ext_resource path="res://scenes/objects/ui/button.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/textures/bg_foam.png" type="Texture" id=15]
[ext_resource path="res://resources/godot/scroll_shader.tres" type="Material" id=16]
[ext_resource path="res://scenes/objects/powerups_spawner.gd" type="Script" id=17]
[ext_resource path="res://resources/textures/bg_rocks.png" type="Texture" id=18]
[ext_resource path="res://resources/textures/bg_rocks_back.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 0, 16, 281, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 281, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 0, 32, 302, 16 )

[sub_resource type="DynamicFont" id=10]
size = 82
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 0, 180, 320, 180 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 0, 360, 320, 180 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 0, 540, 320, 180 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 0, 720, 320, 180 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 0, 900, 320, 180 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 0, 1080, 320, 180 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "default",
"speed": 26.0
} ]

[sub_resource type="AtlasTexture" id=43]
flags = 2
atlas = ExtResource( 15 )
region = Rect2( 0, 81, 320, 47 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float scroll_speed_x;
uniform float scroll_speed_y;

void fragment()
{
	COLOR = texture(TEXTURE, vec2(UV.x + scroll_speed_x * TIME, UV.y + scroll_speed_y * TIME));
}"

[sub_resource type="ShaderMaterial" id=44]
shader = SubResource( 1 )
shader_param/scroll_speed_x = 0.04
shader_param/scroll_speed_y = 0.0

[sub_resource type="AtlasTexture" id=45]
flags = 2
atlas = ExtResource( 15 )
region = Rect2( 0, 33, 320, 48 )

[sub_resource type="ShaderMaterial" id=46]
shader = SubResource( 1 )
shader_param/scroll_speed_x = 0.06
shader_param/scroll_speed_y = 0.0

[sub_resource type="AtlasTexture" id=42]
flags = 2
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 320, 33 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 320, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 6.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.5
orbit_velocity = -0.02
orbit_velocity_random = 0.5
angle = 368.1
angle_random = 1.0
scale = 5.0
scale_random = 0.6
color = Color( 0.592157, 0.741176, 0.937255, 1 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 15, 13.0625 )

[sub_resource type="CircleShape2D" id=12]
radius = 21.095

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 44, 220 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 348, 44 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 348, 44 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="Hud" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 4
custom_constants/margin_left = 5
custom_constants/margin_bottom = 4

[node name="Progress" type="Control" parent="UI/Hud"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 10.0
margin_top = 4.0
margin_right = 310.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 16 )
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource( 11 )

[node name="CharactersContainer" type="Control" parent="UI/Hud/Progress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 1.0
margin_right = -7.0

[node name="Back" type="TextureRect" parent="UI/Hud/Progress"]
margin_left = 18.0
margin_right = 299.0
margin_bottom = 16.0
texture = SubResource( 33 )

[node name="Progress" type="TextureRect" parent="UI/Hud/Progress"]
material = ExtResource( 13 )
margin_left = 18.0
margin_right = 299.0
margin_bottom = 16.0
texture = SubResource( 34 )

[node name="Front" type="TextureRect" parent="UI/Hud/Progress"]
margin_right = 302.0
margin_bottom = 16.0
texture = SubResource( 32 )

[node name="Pause" type="MarginContainer" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="UI/Pause"]
modulate = Color( 0, 0, 0, 0.470588 )
margin_right = 320.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="UI/Pause"]
margin_left = 67.0
margin_top = 57.0
margin_right = 253.0
margin_bottom = 123.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 10 )
text = "PAUSED"

[node name="MarginContainer" type="MarginContainer" parent="UI/Pause"]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_bottom = 12

[node name="Back" parent="UI/Pause/MarginContainer" instance=ExtResource( 14 )]
margin_left = 128.0
margin_top = 136.0
margin_right = 192.0
margin_bottom = 168.0
size_flags_vertical = 8
_text = "TO MENU"

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
rotating = true
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 10 )

[node name="ShakeTimer" type="Timer" parent="GameCamera"]
wait_time = 0.08
one_shot = true

[node name="Background" type="Node2D" parent="."]

[node name="Waterfall" type="AnimatedSprite" parent="Background"]
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
frames = SubResource( 54 )

[node name="RocksBack" type="Sprite" parent="Background"]
position = Vector2( 320, 332 )
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="Foam" type="Node2D" parent="Background"]

[node name="Layer1" type="Sprite" parent="Background/Foam"]
modulate = Color( 1, 1, 1, 0.619608 )
material = ExtResource( 16 )
position = Vector2( 320, 313 )
scale = Vector2( 2, 2 )
texture = SubResource( 43 )

[node name="Layer2" type="Sprite" parent="Background/Foam"]
modulate = Color( 1, 1, 1, 0.619608 )
material = SubResource( 44 )
position = Vector2( 320, 312 )
scale = Vector2( 2, 2 )
texture = SubResource( 45 )

[node name="Layer3" type="Sprite" parent="Background/Foam"]
modulate = Color( 1, 1, 1, 0.619608 )
material = SubResource( 46 )
position = Vector2( 320, 327 )
scale = Vector2( 2, 2 )
texture = SubResource( 42 )

[node name="Rocks" type="Sprite" parent="Background"]
position = Vector2( 320, 337 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
flip_h = true

[node name="WaterParticles" type="Particles2D" parent="."]
position = Vector2( 320, -24 )
amount = 120
lifetime = 3.2
preprocess = 4.0
process_material = SubResource( 13 )

[node name="Bucket" type="Node2D" parent="."]
position = Vector2( 320, 180 )
script = ExtResource( 3 )

[node name="Back" type="Sprite" parent="Bucket"]
texture = ExtResource( 5 )

[node name="Front" type="Sprite" parent="Bucket"]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="InsideArea" type="Area2D" parent="Bucket"]
position = Vector2( 0, 2 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bucket/InsideArea"]
position = Vector2( 0, 0.9375 )
shape = SubResource( 14 )

[node name="InternalWalls" type="KinematicBody2D" parent="Bucket"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bucket/InternalWalls"]
polygon = PoolVector2Array( -16, -16, -16, 18, 16, 18, 16, -16, 12, -16, 12, 13, -12, 13, -12, -16 )

[node name="ExternalWalls" type="KinematicBody2D" parent="Bucket"]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bucket/ExternalWalls"]
polygon = PoolVector2Array( -28, -17, -28, 25, 28, 25, 28, -17, 16, -17, 13, -17, 13, -14, 16, -14, 16, 15, -16, 15, -16, -14, -13, -14, -13, -17, -16, -17 )

[node name="DetectionArea" type="Area2D" parent="Bucket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bucket/DetectionArea"]
shape = SubResource( 12 )

[node name="Characters" type="Node2D" parent="."]

[node name="Spawners" type="Node2D" parent="."]

[node name="HazardsMaker" type="Node2D" parent="Spawners"]
script = ExtResource( 9 )

[node name="HazardsContainer" type="Node2D" parent="Spawners/HazardsMaker"]

[node name="SpawnTimer" type="Timer" parent="Spawners/HazardsMaker"]
one_shot = true

[node name="Clouds" type="Node2D" parent="Spawners"]
script = ExtResource( 8 )

[node name="SpritesContainer" type="Node2D" parent="Spawners/Clouds"]

[node name="SpawnTimer" type="Timer" parent="Spawners/Clouds"]
one_shot = true

[node name="PowerupsSpawner" type="Node2D" parent="Spawners"]
script = ExtResource( 17 )

[node name="StonesContainer" type="Node2D" parent="Spawners/PowerupsSpawner"]

[node name="SpawnTimer" type="Timer" parent="Spawners/PowerupsSpawner"]
one_shot = true

[node name="Walls" type="Node2D" parent="."]

[node name="Left" type="StaticBody2D" parent="Walls"]
position = Vector2( -44, 171 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource( 15 )

[node name="Right" type="StaticBody2D" parent="Walls"]
position = Vector2( 684, 171 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource( 15 )

[node name="Top" type="StaticBody2D" parent="Walls"]
position = Vector2( 320, -92 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
shape = SubResource( 3 )

[node name="Abyss" type="Area2D" parent="."]
position = Vector2( 320, 435 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abyss"]
shape = SubResource( 4 )

[node name="Timers" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="pressed" from="UI/Pause/MarginContainer/Back" to="UI" method="_on_back_to_menu_pressed"]
[connection signal="timeout" from="GameCamera/ShakeTimer" to="GameCamera" method="_on_shake_timeout"]
[connection signal="body_entered" from="Bucket/InsideArea" to="Bucket" method="_on_body_entered_inside_area"]
[connection signal="body_exited" from="Bucket/InsideArea" to="Bucket" method="_on_body_exited_inside_area"]
[connection signal="area_entered" from="Bucket/DetectionArea" to="Bucket" method="_on_detection_body_or_area_entered"]
[connection signal="body_entered" from="Bucket/DetectionArea" to="Bucket" method="_on_detection_body_or_area_entered"]
[connection signal="timeout" from="Spawners/HazardsMaker/SpawnTimer" to="Spawners/HazardsMaker" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Spawners/Clouds/SpawnTimer" to="Spawners/Clouds" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Spawners/PowerupsSpawner/SpawnTimer" to="Spawners/PowerupsSpawner" method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="Abyss" to="." method="_on_abyss_body_entered"]
[connection signal="timeout" from="Timers/SpawnTimer" to="." method="_on_spawn_timeout"]
